--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
-# Created by https://www.gitignore.io/api/python,intellij,visualstudiocode
+# Created by https://www.gitignore.io/api/python,pycharm+all,visualstudiocode
 
-### Intellij ###
+### PyCharm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -55,16 +55,11 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-### Intellij Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+### PyCharm+all Patch ###
+# Ignores the whole idea folder
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
-
-# Sonarlint plugin
-.idea/sonarlint
+.idea/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -177,4 +172,4 @@ venv.bak/
 !.vscode/extensions.json
 .history
 
-# End of https://www.gitignore.io/api/python,intellij,visualstudiocode
+# End of https://www.gitignore.io/api/python,pycharm+all,visualstudiocode
