--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
 
-# Created by https://www.gitignore.io/api/python,pycharm+all,visualstudiocode
+# Created by https://www.gitignore.io/api/linux,python,pycharm,visualstudiocode
 
-### PyCharm+all ###
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -55,11 +70,16 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-### PyCharm+all Patch ###
-# Ignores the whole idea folder
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+### PyCharm Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-.idea/
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
+
+# Sonarlint plugin
+.idea/sonarlint
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -172,4 +192,4 @@ venv.bak/
 !.vscode/extensions.json
 .history
 
-# End of https://www.gitignore.io/api/python,pycharm+all,visualstudiocode
+# End of https://www.gitignore.io/api/linux,python,pycharm,visualstudiocode
