--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,12 @@ venv.bak/
 .history
 
 # End of https://www.gitignore.io/api/linux,python,pycharm,visualstudiocode
+
+.IntelliLang.xml
+.colors.scheme.xml
+.conda_packages.xml
+.debugger.xml
+.editor.codeinsight.xml
+.filetypes.xml
+.web-browsers.xml
+.inspection/
